Fixes vertical alignment on some versions of firefox

--- a/caas-web/src/main/resources/public/css/table.css
+++ b/caas-web/src/main/resources/public/css/table.css
@@ -88,6 +88,10 @@ table {
     width: 100%;
 }
 
+table *, #div_first_col *, #div_header *{
+    box-sizing: border-box;
+}
+
 th, td {
     font-size: 12px;
     line-height: 16px;
